methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:10: error: value forward is not a member of Unit
    left();backward();backward();left()forward();forward();right();
                                       ^